--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@lucide/lab": "^0.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "^54.0.7",
+    "expo-audio": "^1.0.13",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.8",
@@ -39,7 +41,6 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "@expo/metro-runtime": "~6.1.2",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
