--- a/app.json
+++ b/app.json
@@ -9,14 +9,32 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.soulseed"
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/base_form.png",
+        "backgroundColor": "#FFFFFF"
+      }
     },
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/base_form.png",
+          "color": "#FFFFFF"
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
