--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "expo-audio": "^1.0.13",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
-    "expo-constants": "~18.0.8",
+    "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
@@ -43,7 +43,9 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
-    "expo-image": "~3.0.8"
+    "expo-image": "~3.0.8",
+    "expo-notifications": "~0.32.11",
+    "expo-device": "~8.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
