--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "date-fns": "^4.1.0",
     "expo": "^54.0.7",
     "expo-audio": "^1.0.13",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
+    "expo-device": "~8.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.11",
     "expo-router": "~6.0.5",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -42,10 +46,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
-    "expo-image": "~3.0.8",
-    "expo-notifications": "~0.32.11",
-    "expo-device": "~8.0.8"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
