--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
-    "expo": "^54.0.7",
+    "expo": "^54.0.10",
     "expo-audio": "^1.0.13",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.12",
     "expo-device": "~8.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -46,8 +47,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
-    "expo-dev-client": "~6.0.12"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
